<resources>
    <string name="app_name">Trust</string>

    <string name="login">登录</string>
    <string name="login_progress">正在登录···</string>
    <string name="login_no_account">没有账号？请点击注册</string>
    <string name="register">注册</string>
    <string name="register_have_account">已有账号？请点击登录</string>
    <string name="hint_login_account">请输入账号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_login_password2">请确认密码</string>

    <string name="challenge_count">挑战 <![CDATA[<font color="#FF4081">%1$s</font>]]> 次</string>
    <string name="against_count">迎战 <![CDATA[<font color="#FF4081">%1$s</font>]]> 次</string>

    <string name="net_error">网络请求失败了！</string>
</resources>
